# portfolio-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: planner.md
src/portfolio_agent/: app.py
src/portfolio_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/portfolio_agent/agents/: codegen.py  sandbox.py
src/portfolio_agent/clients/: llm.py  tavily.py  vectorstore.py  yahoo.py
src/portfolio_agent/clients/robinhood_client/: config.py  gets_trades_robinhood.py  txn_loaders_from_csv.py
src/portfolio_agent/config/: file_metadata.yaml  settings.py
src/portfolio_agent/data_access/: dividends.py  persist.py  positions.py  prep.py  trades.py
src/portfolio_agent/planner/: agent.py  planner.py
src/portfolio_agent/prompts/: codegen_prompt.j2  final_answer_prompt.j2  planner_prompt.j2
src/portfolio_agent/tools/: catalog.py  registry.py  summarizer.py
src/portfolio_agent/utils/: logger.py
src/portfolio_agent/utils/vectorstore/: __init__.py  pinecone_store.py
src/portfolio_agent/workflows/: portfolio_analysis.py  schema.py
tests/: __init__.py  executes_code.py  test_news_scraper_agent.py  test_news_scraper_integration.py  tests_robinhood_client.py
utils/: __init__.py
